<resources>
    <string name="app_name">Rush</string>
    <!-- Message Fragment -->
    <string name="MessageFragment">Messages</string>
    <string name="UserProfileImageDes">This image is the user\'s profile picture</string>
    <string name="NameExample">First Last</string>
    <string name="FakeTextExample">Lorem ipsum dolor sit ametdsa dsadw</string>
    <!-- Private Message Fragment -->
    <string name="MessageReportSuccess">Message has been reported</string>
    <string name="toUser">Type a name or email</string>
    <string name="to">To</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="messagePlaceHolder">Reply</string>
    <string name="backNavigationButton">backNavigationButton</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_classes">No classes to display</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="class_description">Class Description</string>
    <string name="class_name">Class Name</string>
    <string name="create">Create</string>

    <string name="sendMessageDes">Sends the message to the database</string>
    <!-- Menu -->
    <string name="edit">Edit</string>
    <string name="report">Report</string>
    <string name="delete">Delete</string>

    <!-- Login Fragment -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="new_email">Email</string>
    <string name="new_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="radio_professor">Professor</string>
    <string name="radio_student">Student</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
</resources>